--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,5 +1,4 @@
-{
-    "name": "shopping_app",
+{"name": "shopping_app",
     "short_name": "shopping_app",
     "start_url": ".",
     "display": "standalone",
@@ -9,15 +8,9 @@
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
-        {
-            "src": "icons/Icon-192.png",
+        {"src": "icons/Icon-192.png",
             "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/Icon-512.png",
+            "type": "image/png"},
+        {"src": "icons/Icon-512.png",
             "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
-}
+            "type": "image/png"}]}
